--- a/learneng_vite/scenario_page.html
+++ b/learneng_vite/scenario_page.html
@@ -287,6 +287,67 @@
       fetchScenarios();
     });
   </script>
+  <!-- <script>
+    // Function to get query parameter from URL
+    function getQueryParam(param) {
+      const urlParams = new URLSearchParams(window.location.search);
+      return urlParams.get(param);
+    }
+
+    async function fetchScenarios() {
+      try {
+        // Get levelId from URL
+        const levelId = getQueryParam('levelId');
+
+        // Fetch level information only if levelId is not null
+        let levelName = "";
+        if (levelId) {
+          const levelResponse = await fetch(`http://127.0.0.1:5000/level/${levelId}`);
+          if (!levelResponse.ok) {
+            throw new Error("Failed to fetch level");
+          }
+          const level = await levelResponse.json();
+          levelName = level.name;
+
+          // Update level-indicator text
+          document.getElementById('levelIndicator').innerText = levelName;
+        }
+
+        const response = await fetch('http://127.0.0.1:5000/scenario/');
+        if (!response.ok) {
+          throw new Error("Failed to fetch scenarios");
+        }
+
+        const scenarios = await response.json();
+        const container = document.getElementById('scenarios');
+        let count = 0;
+
+        // Filter scenarios based on levelId
+        const filteredScenarios = scenarios.filter(scenario => scenario.levelId == levelId);
+
+        filteredScenarios.forEach(scenario => {
+          count++;
+          const div = document.createElement('div');
+          div.classList.add(`scenario-card`);
+
+          div.innerHTML =
+            `<div class="number">${count}</div>` +
+            `<img src="page_photo/${scenario.image}" alt="${scenario.image}">` +
+            `<h3>${scenario.name}</h3>` +
+            `<p>${scenario.scenarioDesc}</p>` +
+            `<a href="chatting.html?id=${scenario.id}"> <button onclick="startChat()">Start</button> </a>`;
+          container.appendChild(div);
+        });
+
+      } catch (error) {
+        console.error("Error fetching scenarios:", error);
+      }
+    }
+
+    $(document).ready(function () {
+      fetchScenarios();
+    });
+  </script> -->
 
 </body>
 
