--- a/learneng_vite/welcome.html
+++ b/learneng_vite/welcome.html
@@ -38,26 +38,39 @@
             background-color: #799DEC;
             color: #fff;
             box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+            font-family: 'Courier New', Courier, monospace;
+        }
+
+        /* Circle Buttons Container */
+        .circle-buttons-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: calc(100vh - 100px); /* Adjust height to take up remaining space after header */
         }
 
         /* Circle Buttons */
         .circle-buttons {
             display: flex;
             justify-content: center;
-            margin-top: 50px;
+            align-items: center; /* Vertically center items */
+            width: 100%;
         }
 
         .circle-buttons a {
-            margin: 0 20px;
+            margin: 0 50px; /* Increase margin for bigger buttons */
             text-decoration: none;
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
         .circle-buttons img {
-            width: 100px;
-            height: 100px;
+            width: 400px; /* Bigger image size */
+            height: 400px; /* Bigger image size */
             border-radius: 50%;
-            border: 3px solid #799DEC;
+            border: 5px solid #799DEC; /* Thicker border */
             transition: transform 0.2s;
         }
 
@@ -67,10 +80,11 @@
 
         .circle-buttons span {
             display: block;
-            margin-top: 10px;
-            font-size: 1.2rem;
+            margin-top: 15px; /* Increase margin for bigger text */
+            font-size: 50px; /* Bigger text */
             font-weight: bold;
             color: #333;
+            font-family: 'Courier New', Courier, monospace;
         }
     </style>
 </head>
@@ -79,15 +93,17 @@
         WELCOME
     </div>
 
-    <div class="circle-buttons">
-        <a href="teacher.html">
-            <img src="page_photo/teacher.png" alt="Teacher">
-            <span>Teacher</span>
-        </a>
-        <a href="home.html">
-            <img src="page_photo/learner.png" alt="Learner">
-            <span>Learner</span>
-        </a>
+    <div class="circle-buttons-container">
+        <div class="circle-buttons">
+            <a href="editor_scenario_page.html">
+                <img src="/page_photo/teacher2.png" alt="Teacher">
+                <span>Teacher</span>
+            </a>
+            <a href="home.html">
+                <img src="/page_photo/learner2.png" alt="Learner">
+                <span>Learner</span>
+            </a>
+        </div>
     </div>
 </body>
 </html>
